Formatting fix:about.html bold individuals with spacing adjustments.

--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -19,7 +19,8 @@
 
 	text-align:center;
 	width:185px;
-	height:100px;
+	height:80px;
+	padding:auto;
 	display:block;
 	float:left;
 }
